--- a/player3/index.html
+++ b/player3/index.html
@@ -3,18 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aplikasi Skor Biliard 3 Player</title>
+  <title>🎱 Black Poll</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
 
   <h1>🎱 Game Score</h1>
   <div class="container">
-    <input type="text" id="name1" placeholder="Player Name 1" />
-    <input type="text" id="name2" placeholder="Player Name 2" />
-    <input type="text" id="name3" placeholder="Player Name 3" />
-    <button onclick="startGame()">Start</button>
-    <a href="../index.html" class="btn-switch">Switch to 2 Players</a>
+    <input type="text" id="name1" placeholder="Player 1" />
+    <input type="text" id="name2" placeholder="Player 2" />
+    <input type="text" id="name3" placeholder="Player 3" />
+
+    <div class="button-group">
+      <button onclick="startGame()">Start</button>
+      <a href="../index.html" class="btn-switch">Switch</a>
+    </div>
 
     <div id="scoreboard" class="scoreboard" style="display: none;">
       <div class="player">
